--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :text %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br />
-    <%= autocomplete_field_tag 'user', @post.user.try(:name), autocomplete_user_name_posts_path, :id_element => '#post_user_id' %>
+    <%= f.label :user %><br />
+    <%= autocomplete_field_tag 'post_user', @post.user.try(:name), autocomplete_user_name_posts_path, :id_element => '#post_user_id' %>
     <%= f.hidden_field :user_id %>
   </div>
   <div class="actions">
